fin main index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
         <a href="#">Contact</a>
       </nav>
       <h1>Meisner</h1>
+      <p>
+        North Kawartha, Ontario, Canada| 1616 saft
+      </p>
     </header>
+    <main>
+      <p>
+        <strong>Modules</strong><br>6.5<br><strong>Structural Engineering</strong>
+        <br>Blackwell<br><strong>Photography</strong><br>Revelateur Studio<br> 
+      </p>
+      <nav>
+        <a href="#">View Floorplar</a>
+      </nav>
+      <img src="_consigne/images/01-17030-Mafco-Fall-10.jpg" alt="facade">
+      <p>
+        Replacing a three season cottage that has been in the family for 
+        generations, this MAFCOhouse is a four season home with extensive views 
+        from almost every side. The living space and master bedroom share the 
+        sheer glass lake elevation, while a large bank of windows to the rear 
+        provides views and transparency through the cottage.
+      </p>
+      <img src="_consigne/images/02-17030-Mafco-Fall-9.jpg" alt="facade cote">
+      <p>
+        Large roof overhangs and big decks to front and rear connect with the 
+        landscape and encourage outdoor living. Guest bedrooms are located in a 
+        separate wing, connected via a corridor incorporating an office space 
+        in this compact MAFCO design.
+      </p>
+      <img src="_consigne/images/03-17030-Mafco-Fall-11.jpg" alt="facade entree">
+      
+    </main>
   </body>
 </html>
