corrections index.html

--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
         <a href="#">Contact</a>
       </nav>
       <h1>Meisner</h1>
-      <p>
-        North Kawartha, Ontario, Canada| 1616 saft
+      <p class="location">
+        North Kawartha, Ontario, Canada| 1616 sqft
       </p>
     </header>
     <main>
-      <p>
-        <strong>Modules</strong><br>6.5<br><strong>Structural Engineering</strong>
-        <br>Blackwell<br><strong>Photography</strong><br>Revelateur Studio<br> 
+      <p class="modules">
+        <strong>Modules</strong><br>6.5<br>
       </p>
-      <nav>
-        <a href="#">View Floorplar</a>
+      <p class="structure">
+        <strong>Structural Engineering</strong><br>Blackwell<br>
+      </p>
+      <p class="photography">
+        <strong>Photography</strong><br>Revelateur Studio<br> 
+      </p>
+      <nav class="second">
+        <a href="#">View Floorplan</a>
       </nav>
       <img src="_consigne/images/01-17030-Mafco-Fall-10.jpg" alt="facade">
-      <p>
+      <p class="first-text">
         Replacing a three season cottage that has been in the family for 
         generations, this MAFCOhouse is a four season home with extensive views 
         from almost every side. The living space and master bedroom share the 
@@ -45,7 +50,18 @@
         in this compact MAFCO design.
       </p>
       <img src="_consigne/images/03-17030-Mafco-Fall-11.jpg" alt="facade entree">
-      
+      <nav class="second">
+        <a href="#">Back to projects</a> 
+      </nav>
     </main>
+    <footer>
+      <p class="locality">
+       <strong>A architectes</strong><br>Ontario, Canada<br>
+      </p>
+      <nav>
+        <p>Sources</p>
+        <a href="https://mafcohouse.com/">https://mafcohouse.com/</a>
+      </nav>
+    </footer>
   </body>
 </html>
