corrections index.html

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         provides views and transparency through the cottage.
       </p>
       <img src="_consigne/images/02-17030-Mafco-Fall-9.jpg" alt="facade cote">
-      <p>
+      <p class="first-text">
         Large roof overhangs and big decks to front and rear connect with the 
         landscape and encourage outdoor living. Guest bedrooms are located in a 
         separate wing, connected via a corridor incorporating an office space 
         in this compact MAFCO design.
       </p>
       <img src="_consigne/images/03-17030-Mafco-Fall-11.jpg" alt="facade entree">
-      <nav class="second">
+      <nav class="third">
         <a href="#">Back to projects</a> 
       </nav>
     </main>
@@ -58,9 +58,9 @@
       <p class="locality">
        <strong>A architectes</strong><br>Ontario, Canada<br>
       </p>
-      <nav>
+      <nav class="sources">
         <p>Sources</p>
-        <a href="https://mafcohouse.com/">https://mafcohouse.com/</a>
+        <a href="https://mafcohouse.com/">https://mafcohouse.com</a>
       </nav>
     </footer>
   </body>
